--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,20 +19,20 @@ jobs:
       - setup_remote_docker
       - run:
           name: Login at Docker Hub
-          command: docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD"
+          command: docker login -u "${DOCKER_USERNAME}" -p "${DOCKER_PASSWORD}"
       - run:
           name: Build Docker image
           command: docker build -t my-image .
       - run:
           name: Tag Docker image
           command: |
-            docker tag my-image $DOCKER_USERNAME/devnode:${CIRCLE_BUILD_NUM}
-            docker tag my-image $DOCKER_USERNAME/devnode:latest
+            docker tag my-image ${DOCKER_USERNAME}/devnode:${CIRCLE_BUILD_NUM}
+            docker tag my-image ${DOCKER_USERNAME}/devnode:latest
       - run:
           name: Push image to Docker registry
           command: |
-          docker push $DOCKER_USERNAME/devnode:${CIRCLE_BUILD_NUM}
-          docker push $DOCKER_USERNAME/devnode:latest
+            docker push ${DOCKER_USERNAME}/devnode:${CIRCLE_BUILD_NUM}
+            docker push ${DOCKER_USERNAME}/devnode:latest
       - discord/status:
           fail_only: false
           success_message: ":+1: **${CIRCLE_USERNAME}** deployed **${CIRCLE_JOB}** to docker HUB with tags **latest** and **${CIRCLE_BUILD_NUM}**."
